[gd_scene load_steps=19 format=2]

[ext_resource path="res://art/grass.jpeg" type="Texture" id=1]
[ext_resource path="res://Canvas_Layer_HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Area2D_dog.tscn" type="PackedScene" id=3]
[ext_resource path="res://Area2D_man.tscn" type="PackedScene" id=4]
[ext_resource path="res://Area2D_ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://Node2D_MAIN.gd" type="Script" id=6]
[ext_resource path="res://Path2D_squirrel.tscn" type="PackedScene" id=7]
[ext_resource path="res://path2D_squirrel_2.tscn" type="PackedScene" id=8]
[ext_resource path="res://sound/throw_whistle.wav" type="AudioStream" id=9]
[ext_resource path="res://sound/smoky-mountain.ogg" type="AudioStream" id=10]
[ext_resource path="res://sound/tennis_ball.wav" type="AudioStream" id=11]
[ext_resource path="res://sound/forest_ambience.ogg" type="AudioStream" id=12]
[ext_resource path="res://sound/bell.wav" type="AudioStream" id=13]
[ext_resource path="res://sound/dog_bark.wav" type="AudioStream" id=14]
[ext_resource path="res://sound/squeak.wav" type="AudioStream" id=15]
[ext_resource path="res://random_squirrel_Node2D.tscn" type="PackedScene" id=16]
[ext_resource path="res://random_squirrel_2_node2D.tscn" type="PackedScene" id=17]
[ext_resource path="res://sound/snap.wav" type="AudioStream" id=19]

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )
squirrel_scene = ExtResource( 7 )
squirrel_scene_2 = ExtResource( 8 )
random_squirrel_scene = ExtResource( 16 )
random_squirrel_scene_2 = ExtResource( 17 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 1026.0
margin_bottom = 601.0
color = Color( 0.521569, 0.482353, 0.435294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 514.34, 300.358 )
scale = Vector2( 0.9512, 0.831837 )
texture = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="Area2D_dog" parent="." instance=ExtResource( 3 )]
position = Vector2( 152, 424 )
collision_layer = 255
collision_mask = 255

[node name="dog_bark" type="AudioStreamPlayer2D" parent="Area2D_dog"]
stream = ExtResource( 14 )

[node name="Area2D_man" parent="." instance=ExtResource( 4 )]
position = Vector2( 82.8038, 281.749 )

[node name="throw" type="AudioStreamPlayer" parent="Area2D_man"]
stream = ExtResource( 9 )

[node name="bell" type="AudioStreamPlayer2D" parent="Area2D_man"]
position = Vector2( 186.25, 16.849 )
scale = Vector2( 0.5, 0.5 )
stream = ExtResource( 13 )

[node name="Area2D_ball" parent="." instance=ExtResource( 5 )]
position = Vector2( 1091.71, 316.174 )

[node name="thud" type="AudioStreamPlayer2D" parent="Area2D_ball"]
position = Vector2( -3.05176e-05, 0 )
stream = ExtResource( 11 )
volume_db = 5.0

[node name="ready_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
__meta__ = {
"_editor_description_": "timer will trigger after the 'start' button is pushed "
}

[node name="show_message_timer" type="Timer" parent="."]
wait_time = 16.0
one_shot = true
__meta__ = {
"_editor_description_": "shows the message 'get the squirrels!!!'
16 sec"
}

[node name="hide_message_timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
__meta__ = {
"_editor_description_": "hides the 'get the squirrels!!' message
19 sec"
}

[node name="squirrel_timer" type="Timer" parent="."]
wait_time = 17.0
one_shot = true
__meta__ = {
"_editor_description_": "countdown triggers first set of squirrels
17sec
"
}

[node name="random_squirrel_timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
__meta__ = {
"_editor_description_": "first set of ranom squirrels

20"
}

[node name="squirrel_2_timer" type="Timer" parent="."]
wait_time = 32.0
one_shot = true
__meta__ = {
"_editor_description_": "countdown triggers the second set of squirrels
32 secs"
}

[node name="random_squirrel_timer_2" type="Timer" parent="."]
wait_time = 34.0
one_shot = true
__meta__ = {
"_editor_description_": "countdown triggers second set of random squirrels
34"
}

[node name="end_game_timer" type="Timer" parent="."]
wait_time = 40.46
one_shot = true
__meta__ = {
"_editor_description_": "ends the game

40 sec"
}

[node name="play_again_timer" type="Timer" parent="."]
wait_time = 42.0
one_shot = true
__meta__ = {
"_editor_description_": "timer to show 'Play Again' button

42 sec"
}

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
__meta__ = {
"_editor_description_": "Volume db:-3"
}

[node name="forest_ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -2.0

[node name="squeak" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="snap" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 556.706, 267.882 )
stream = ExtResource( 19 )
[connection signal="squirrel_killed" from="." to="HUD" method="_on_Node2D_squirrel_killed"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="area_entered" from="Area2D_man" to="HUD" method="_on_Area2D_man_area_entered"]
[connection signal="area_entered" from="Area2D_man" to="Area2D_dog" method="_on_Area2D_man_area_entered"]
[connection signal="area_entered" from="Area2D_man" to="Area2D_man" method="_on_Area2D_man_area_entered"]
[connection signal="ball_thrown" from="Area2D_man" to="Area2D_ball" method="_on_Area2D_man_ball_thrown"]
[connection signal="area_entered" from="Area2D_ball" to="." method="_on_Area2D_ball_area_entered"]
[connection signal="area_entered" from="Area2D_ball" to="Area2D_dog" method="_on_Area2D_ball_area_entered"]
[connection signal="area_entered" from="Area2D_ball" to="Area2D_man" method="_on_Area2D_ball_area_entered"]
[connection signal="area_entered" from="Area2D_ball" to="Area2D_ball" method="_on_Area2D_ball_area_entered"]
[connection signal="area_exited" from="Area2D_ball" to="Area2D_dog" method="_on_Area2D_ball_area_exited"]
[connection signal="area_exited" from="Area2D_ball" to="Area2D_man" method="_on_Area2D_ball_area_exited"]
[connection signal="area_exited" from="Area2D_ball" to="Area2D_ball" method="_on_Area2D_ball_area_exited"]
[connection signal="timeout" from="ready_timer" to="." method="_on_ready_timer_timeout"]
[connection signal="timeout" from="show_message_timer" to="." method="_on_show_message_timer_timeout"]
[connection signal="timeout" from="hide_message_timer" to="." method="_on_hide_message_timer_timeout"]
[connection signal="timeout" from="squirrel_timer" to="." method="_on_squirrel_timer_timeout"]
[connection signal="timeout" from="random_squirrel_timer" to="." method="_on_random_squirrel_timer_timeout"]
[connection signal="timeout" from="squirrel_2_timer" to="." method="_on_squirrel_2_timer_timeout"]
[connection signal="timeout" from="random_squirrel_timer_2" to="." method="_on_random_squirrel_timer_2_timeout"]
[connection signal="timeout" from="end_game_timer" to="." method="_on_end_game_timer_timeout"]
[connection signal="timeout" from="end_game_timer" to="Area2D_dog" method="_on_end_game_timer_timeout"]
[connection signal="timeout" from="play_again_timer" to="." method="_on_play_again_timer_timeout"]
